--- a/config.yaml
+++ b/config.yaml
@@ -63,9 +63,9 @@ params:
   labs:
     TA: Aki Kirbizakis
     email: e.kirbizakis@gmail.com
-    location:  "https://concordia-ca.zoom.us/s/8992285958#success"
+    location:  "https://concordia-ca.zoom.us/s/6364221111#success"
     labtime: "Tu 10:15-11:30"
-    officehours: "TBA" 
+    officehours: "Wed 10-11" 
   university: 
     name: Concordia University
     url: "https://www.concordia.ca"
